Replace `List#of` with Java 8 counterpart in `Query`